--- a/literature/theory/main/reference.bib
+++ b/literature/theory/main/reference.bib
@@ -379,3 +379,20 @@
   author = {Gianluca Femminis},
   eprint = {https://dipartimenti.unicatt.it/economia-finanza-def050.pdf}
 }
+@book{PreStoLu89,
+  isbn      = {9780674750968},
+  url       = {http://www.jstor.org/stable/j.ctvjnrt76},
+  abstract  = {This rigorous but brilliantly lucid book presents a self-contained treatment of modern economic dynamics. Stokey, Lucas, and Prescott develop the basic methods of recursive analysis and illustrate the many areas where they can usefully be applied.},
+  author    = {Nancy L. Stokey and Robert E. Lucas and Edward C. Prescott},
+  publisher = {Harvard University Press},
+  title     = {Recursive Methods in Economic Dynamics},
+  urldate   = {2024-02-13},
+  year      = {1989}
+}
+@book{THoBru04,
+  author = {Thompson, Bruce},
+  year   = {2004},
+  month  = {01},
+  pages  = {},
+  title  = {Thompson, B. (2004). Exploratory and confirmatory factor analysis: Understanding concepts and applications. Washington, DC: American Psychological Association. (International Standard Book Number: 1-59147-093-5)}
+}
